--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             </div>
             <div class="row no-gutters">
                 <div class="col-lg-6">
-                    <a class="portfolio-item" href="http://twitter.com/intent/tweet?text=%23corona%20%40vvashu38%0AWhat%20are%20the%20coronavirus%20world%20updates%3F" target="_blank">
+                    <a class="portfolio-item" href="http://twitter.com/intent/tweet?text=%23corona%20%40vashistha38%0AWhat%20are%20the%20coronavirus%20world%20updates%3F" target="_blank">
                         <div class="caption">
                             <div class="caption-content">
                                 <h2 style="color: rgb(0,0,0);">Twitter bot for coronavirus updates</h2>
